# Memoria

./: SPEC.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/activity/: mod.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/config/: settings.rs
src-tauri/src/embedding/: mod.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/knowledge/: mod.rs
src-tauri/src/processing/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/storage/: mod.rs  sqlite.rs
src-tauri/src/timeline/: mod.rs
src-tauri/src/utils/: metrics.rs
src/js/: app.js
src/js/utils/: api.js  debounce.js  format.js
src/js/views/: graph.js  preview.js  search.js  settings.js  timeline.js
src/styles/: main.css  skeuomorphic.css  views.css
