[package]
name = "memoria"
version = "0.1.0"
description = "AI-Powered Personal Memory System"
authors = ["Memoria Team"]
edition = "2021"

[lib]
name = "memoria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
directories = "5"
regex = "1"
url = "2"
notify = "6"
image = "0.25"
toml = "0.8"
shellexpand = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
